@@ -7,14 +7,12 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.cache.annotation.CacheEvict;
 import org.springframework.cache.annotation.Cacheable;
-import org.springframework.http.ResponseEntity;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 import uk.gov.hmcts.reform.authorisation.generators.AuthTokenGenerator;
 import uk.gov.hmcts.reform.idam.client.IdamClient;
 import uk.gov.hmcts.reform.prl.clients.CommonDataRefApi;
 import uk.gov.hmcts.reform.prl.clients.JudicialUserDetailsApi;
-import uk.gov.hmcts.reform.prl.clients.StaffResponseDetailsApi;
 import uk.gov.hmcts.reform.prl.config.launchdarkly.LaunchDarklyClient;
 import uk.gov.hmcts.reform.prl.exception.NoStaffResponseException;
 import uk.gov.hmcts.reform.prl.mapper.staffresponse.StaffResponseToDynamicListElementFilter;
@@ -29,8 +27,7 @@ import uk.gov.hmcts.reform.prl.models.dto.judicial.JudicialUsersApiResponse;
 import uk.gov.hmcts.reform.prl.models.dto.legalofficer.StaffResponse;
 
 import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -38,10 +35,7 @@ import java.util.stream.Collectors;
 
 import static org.apache.logging.log4j.util.Strings.concat;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.LEGALOFFICE;
-import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.SERVICENAME;
 import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.SERVICE_ID;
-import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.STAFFORDERASC;
-import static uk.gov.hmcts.reform.prl.constants.PrlAppsConstants.STAFFSORTCOLUMN;
 
 @Slf4j
 @Service
@@ -52,7 +46,7 @@ public class RefDataUserService {
     public static final String STAFF_REF_DATA_CACHE = "staffRefDataCache";
 
     private final AuthTokenGenerator authTokenGenerator;
-    private final StaffResponseDetailsApi staffResponseDetailsApi;
+    private final StaffRefDataService staffRefDataService;
     private final JudicialUserDetailsApi judicialUserDetailsApi;
     private final IdamClient idamClient;
     private final CommonDataRefApi commonDataRefApi;
@@ -72,7 +66,7 @@ public class RefDataUserService {
     public DynamicList getStaffDynamicList(StaffResponseToDynamicListElementFilter filter) {
         List<DynamicListElement> listItems = new ArrayList<>();
         try {
-            List<StaffResponse> allStaff = getAllStaffDetails();
+            List<StaffResponse> allStaff = staffRefDataService.getAllStaffDetails();
             listItems.addAll(applyStaffResponseFilter(allStaff, filter));
         } catch (Exception e) {
             log.error("Error retrieving staff list - {}", e.getMessage());
@@ -93,39 +87,12 @@ public class RefDataUserService {
 
     public List<DynamicListElement> getLegalAdvisorList() {
         try {
-            List<StaffResponse> allStaff = getAllStaffDetails();
+            List<StaffResponse> allStaff = staffRefDataService.getAllStaffDetails();
             return onlyLegalAdvisor(allStaff);
         } catch (NoStaffResponseException e) {
             log.error("Staff details Lookup Failed - {}", e.getMessage());
         }
         return List.of(DynamicListElement.builder().build());
-    }
-
-    /**
-     * Gets all staff details in a single request (no paging).
-     * Results are cached for 30 minutes.
-     *
-     * @return list of all staff responses
-     */
-    @Cacheable(cacheNames = STAFF_REF_DATA_CACHE)
-    public List<StaffResponse> getAllStaffDetails() {
-        log.info("Fetching all staff ref data (not cached)");
-        try {
-            ResponseEntity<List<StaffResponse>> response = staffResponseDetailsApi.getAllStaffResponseDetails(
-                idamClient.getAccessToken(refDataIdamUsername, refDataIdamPassword),
-                authTokenGenerator.generate(),
-                SERVICENAME,
-                STAFFSORTCOLUMN,
-                STAFFORDERASC,
-                Integer.MAX_VALUE,
-                0
-            );
-            List<StaffResponse> staffList = response.getBody();
-            log.info("Fetched {} staff members", staffList != null ? staffList.size() : 0);
-            return staffList != null ? staffList : Collections.emptyList();
-        } catch (FeignException e) {
-            throw new NoStaffResponseException("Failed to retrieve staff response", e);
-        }
     }
 
     public List<JudicialUsersApiResponse> getAllJudicialUserDetails(JudicialUsersApiRequest judicialUsersApiRequest) {
@@ -162,7 +129,7 @@ public class RefDataUserService {
             requestBody
         );
         if (response != null && !response.isEmpty()) {
-            JudicialUsersApiResponse judge = response.get(0);
+            JudicialUsersApiResponse judge = response.getFirst();
             log.info("Judicial API response for sidamId {}: postNominals={}, appointments={}",
                 sidamId, judge.getPostNominals(), judge.getAppointments());
         }
@@ -182,7 +149,7 @@ public class RefDataUserService {
     }
 
     private List<DynamicListElement> onlyLegalAdvisor(List<StaffResponse> listOfStaffResponse) {
-        if (null != listOfStaffResponse) {
+        if (null != listOfStaffResponse && !listOfStaffResponse.isEmpty()) {
             return listOfStaffResponse.stream()
                 .filter(response -> response.getStaffProfile().getUserType().equalsIgnoreCase(LEGALOFFICE))
                 .map(this::getDisplayEntry).collect(Collectors.toList());
@@ -208,7 +175,7 @@ public class RefDataUserService {
             );
 
         } catch (FeignException e) {
-            log.error("Category Values look up failed {} ", e);
+            log.error("Category Values look up failed", e);
         }
         return commonDataResponse;
     }
@@ -225,18 +192,18 @@ public class RefDataUserService {
                 flagType
             );
         } catch (Exception e) {
-            log.error("Case flags Values look up failed {} ", e);
+            log.error("Case flags Values look up failed", e);
         }
         return caseFlag;
     }
 
     public List<DynamicListElement> filterCategoryValuesByCategoryId(CommonDataResponse commonDataResponse,String categoryId) {
         if (null != commonDataResponse) {
-            List<DynamicListElement> listOfCategoryValues = commonDataResponse.getCategoryValues().stream()
+            return commonDataResponse.getCategoryValues().stream()
                 .filter(response -> response.getCategoryKey().equalsIgnoreCase(categoryId))
-                .map(this::getDisplayCategoryEntry).collect(Collectors.toList());
-            Collections.sort(listOfCategoryValues, (a, b) -> a.getCode().compareToIgnoreCase(b.getCode()));
-            return listOfCategoryValues;
+                .map(this::getDisplayCategoryEntry)
+                .sorted(Comparator.comparing(DynamicListElement::getCode, String.CASE_INSENSITIVE_ORDER))
+                .collect(Collectors.toList());
         }
 
         return List.of(DynamicListElement.builder().build());
@@ -255,11 +222,10 @@ public class RefDataUserService {
         if (null != commonDataResponse && null != commonDataResponse.getCategoryValues()) {
             listOfSubCategoryValues = commonDataResponse.getCategoryValues().stream()
                 .filter(categoryValues -> categoryValues.getChildNodes() != null && categoryValues.getValueEn().equalsIgnoreCase(hearingPlatform))
-                .map(CategoryValues::getChildNodes).toList().stream()
-                .flatMap(Collection::stream)
+                .flatMap(categoryValues -> categoryValues.getChildNodes().stream())
                 .map(this::displaySubChannelEntry)
+                .sorted(Comparator.comparing(DynamicListElement::getLabel, String.CASE_INSENSITIVE_ORDER))
                 .collect(Collectors.toList());
-            Collections.sort(listOfSubCategoryValues, (a, b) -> a.getLabel().compareToIgnoreCase(b.getLabel()));
             return listOfSubCategoryValues;
         }
 
@@ -274,6 +240,3 @@ public class RefDataUserService {
     }
 
 }
-
-
-
